--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
-  <title>The Friendship Map</title>
+  <title>The Hoes Map</title>
   <style>
     svg {
       width: 100%;
