--- a/index.html
+++ b/index.html
@@ -3806,7 +3806,7 @@
          id="tspan488"
          style="font-variant:normal;font-weight:700;font-size:14px;font-family:Helvetica;writing-mode:lr-tb;fill:#000000;fill-opacity:1;fill-rule:nonzero;stroke:none"
          x="0"
-         y="0">The Slay club</tspan></text>
+         y="0">The Hoes club</tspan></text>
     <rect
        style="fill:#cf7fa5;stroke:#000000;stroke-width:0.513213;fill-opacity:1"
        id="rect488"
